# anchor-breeding-contracts

./: .gitignore  README.md
breeding_cooldown/: Anchor.toml  create_uris.sh  package-lock.json  package.json
breeding_cooldown/programs/breeding_cooldown/: Cargo.toml
breeding_cooldown/programs/breeding_cooldown/src/: lib.rs
breeding_cooldown/programs/breeding_state/: Cargo.toml
breeding_cooldown/programs/breeding_state/src/: lib.rs
breeding_cooldown/scripts/: create_uris.ts  uris.json
breeding_cooldown/tests/: breeding_cooldown.ts  utils.ts
notes/: dragonz_idl.json  dragonz_q.txt  hatch.txt  unknown_program.txt
