[package]
name = "breeding_cooldown"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "breeding_cooldown"

[features]
no-entrypoint = []

[dependencies]
anchor-lang = "0.19.0"
anchor-spl = "0.19.0"
spl-token = { version = "3.2.0", features = [ "no-entrypoint" ] }
spl-token-metadata = { version = "0.0.1", features = [ "no-entrypoint" ] }
solana-program = "1.8.12"
