[package]
name = "breeding_cooldown"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "breeding_cooldown"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.20.1"
anchor-spl = "0.20.1"
breeding_state = { path = "../breeding_state", features = ["cpi"] }
