[package]
name = "breeding_cooldown"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "breeding_cooldown"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = { version = "0.21.0", features = ["init-if-needed"] }
anchor-spl = "0.21.0"
spl-token = { version = "3.2.0", features = [ "no-entrypoint" ] }
spl-token-metadata = { version = "0.0.1", features = [ "no-entrypoint" ] }
solana-program = "1.8.12"
arrayref = "0.3.6"
