[package]
name = "breeding_state"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "breeding_state"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.20.1"
anchor-spl = "0.20.1"
spl-token = { version = "3.2.0", features = [ "no-entrypoint" ] }
spl-token-metadata = { version = "0.0.1", features = [ "no-entrypoint" ] }
solana-program = "1.8.12"
